// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "color": Object {
    "black": Object {
      "border-color": "black",
    },
    "blue": Object {
      "border-color": "blue",
    },
    "bottom": Object {
      "black": Object {
        "border-bottom-color": "black",
      },
      "blue": Object {
        "border-bottom-color": "blue",
      },
      "gray": Object {
        "border-bottom-color": "gray",
      },
      "green": Object {
        "border-bottom-color": "green",
      },
      "orange": Object {
        "border-bottom-color": "orange",
      },
      "purple": Object {
        "border-bottom-color": "purple",
      },
      "red": Object {
        "border-bottom-color": "red",
      },
      "white": Object {
        "border-bottom-color": "white",
      },
      "yellow": Object {
        "border-bottom-color": "yellow",
      },
    },
    "gray": Object {
      "border-color": "gray",
    },
    "green": Object {
      "border-color": "green",
    },
    "left": Object {
      "black": Object {
        "border-left-color": "black",
      },
      "blue": Object {
        "border-left-color": "blue",
      },
      "gray": Object {
        "border-left-color": "gray",
      },
      "green": Object {
        "border-left-color": "green",
      },
      "orange": Object {
        "border-left-color": "orange",
      },
      "purple": Object {
        "border-left-color": "purple",
      },
      "red": Object {
        "border-left-color": "red",
      },
      "white": Object {
        "border-left-color": "white",
      },
      "yellow": Object {
        "border-left-color": "yellow",
      },
    },
    "orange": Object {
      "border-color": "orange",
    },
    "purple": Object {
      "border-color": "purple",
    },
    "red": Object {
      "border-color": "red",
    },
    "right": Object {
      "black": Object {
        "border-right-color": "black",
      },
      "blue": Object {
        "border-right-color": "blue",
      },
      "gray": Object {
        "border-right-color": "gray",
      },
      "green": Object {
        "border-right-color": "green",
      },
      "orange": Object {
        "border-right-color": "orange",
      },
      "purple": Object {
        "border-right-color": "purple",
      },
      "red": Object {
        "border-right-color": "red",
      },
      "white": Object {
        "border-right-color": "white",
      },
      "yellow": Object {
        "border-right-color": "yellow",
      },
    },
    "top": Object {
      "black": Object {
        "border-top-color": "black",
      },
      "blue": Object {
        "border-top-color": "blue",
      },
      "gray": Object {
        "border-top-color": "gray",
      },
      "green": Object {
        "border-top-color": "green",
      },
      "orange": Object {
        "border-top-color": "orange",
      },
      "purple": Object {
        "border-top-color": "purple",
      },
      "red": Object {
        "border-top-color": "red",
      },
      "white": Object {
        "border-top-color": "white",
      },
      "yellow": Object {
        "border-top-color": "yellow",
      },
    },
    "white": Object {
      "border-color": "white",
    },
    "yellow": Object {
      "border-color": "yellow",
    },
  },
  "radius": Object {
    "bottomLeft": Object {
      "large": Object {
        "border-bottom-left-radius": "6px",
      },
      "medium": Object {
        "border-bottom-left-radius": "4px",
      },
      "small": Object {
        "border-bottom-left-radius": "2px",
      },
    },
    "bottomRight": Object {
      "large": Object {
        "border-bottom-right-radius": "6px",
      },
      "medium": Object {
        "border-bottom-right-radius": "4px",
      },
      "small": Object {
        "border-bottom-right-radius": "2px",
      },
    },
    "large": Object {
      "border-radius": "6px",
    },
    "medium": Object {
      "border-radius": "4px",
    },
    "small": Object {
      "border-radius": "2px",
    },
    "topLeft": Object {
      "large": Object {
        "border-top-left-radius": "6px",
      },
      "medium": Object {
        "border-top-left-radius": "4px",
      },
      "small": Object {
        "border-top-left-radius": "2px",
      },
    },
    "topRight": Object {
      "large": Object {
        "border-top-right-radius": "6px",
      },
      "medium": Object {
        "border-top-right-radius": "4px",
      },
      "small": Object {
        "border-top-right-radius": "2px",
      },
    },
  },
  "style": Object {
    "bottom": Object {
      "dashed": Object {
        "border-bottom-style": "dashed",
      },
      "dotted": Object {
        "border-bottom-style": "dotted",
      },
      "none": Object {
        "border-bottom-style": "none",
      },
      "solid": Object {
        "border-bottom-style": "solid",
      },
    },
    "dashed": Object {
      "border-style": "dashed",
    },
    "dotted": Object {
      "border-style": "dotted",
    },
    "left": Object {
      "dashed": Object {
        "border-left-style": "dashed",
      },
      "dotted": Object {
        "border-left-style": "dotted",
      },
      "none": Object {
        "border-left-style": "none",
      },
      "solid": Object {
        "border-left-style": "solid",
      },
    },
    "none": Object {
      "border-style": "none",
    },
    "right": Object {
      "dashed": Object {
        "border-right-style": "dashed",
      },
      "dotted": Object {
        "border-right-style": "dotted",
      },
      "none": Object {
        "border-right-style": "none",
      },
      "solid": Object {
        "border-right-style": "solid",
      },
    },
    "solid": Object {
      "border-style": "solid",
    },
    "top": Object {
      "dashed": Object {
        "border-top-style": "dashed",
      },
      "dotted": Object {
        "border-top-style": "dotted",
      },
      "none": Object {
        "border-top-style": "none",
      },
      "solid": Object {
        "border-top-style": "solid",
      },
    },
  },
  "width": Object {
    "bottom": Object {
      "extraThick": Object {
        "border-bottom-width": "8px",
      },
      "medium": Object {
        "border-bottom-width": "2px",
      },
      "none": Object {
        "border-bottom-width": "none",
      },
      "thick": Object {
        "border-bottom-width": "4px",
      },
      "thin": Object {
        "border-bottom-width": ".5rem",
      },
    },
    "extraThick": Object {
      "border-width": "8px",
    },
    "left": Object {
      "extraThick": Object {
        "border-left-width": "8px",
      },
      "medium": Object {
        "border-left-width": "2px",
      },
      "none": Object {
        "border-left-width": "none",
      },
      "thick": Object {
        "border-left-width": "4px",
      },
      "thin": Object {
        "border-left-width": ".5rem",
      },
    },
    "medium": Object {
      "border-width": "2px",
    },
    "none": Object {
      "border-width": "none",
    },
    "right": Object {
      "extraThick": Object {
        "border-right-width": "8px",
      },
      "medium": Object {
        "border-right-width": "2px",
      },
      "none": Object {
        "border-right-width": "none",
      },
      "thick": Object {
        "border-right-width": "4px",
      },
      "thin": Object {
        "border-right-width": ".5rem",
      },
    },
    "thick": Object {
      "border-width": "4px",
    },
    "thin": Object {
      "border-width": ".5rem",
    },
    "top": Object {
      "extraThick": Object {
        "border-top-width": "8px",
      },
      "medium": Object {
        "border-top-width": "2px",
      },
      "none": Object {
        "border-top-width": "none",
      },
      "thick": Object {
        "border-top-width": "4px",
      },
      "thin": Object {
        "border-top-width": ".5rem",
      },
    },
  },
}
`;

exports[`border when custom config is provided when the custom config provides a new value should add the value and not amend any existing values 1`] = `
Object {
  "color": Object {
    "black": Object {
      "border-color": "black",
    },
    "blue": Object {
      "border-color": "blue",
    },
    "bottom": Object {
      "black": Object {
        "border-bottom-color": "black",
      },
      "blue": Object {
        "border-bottom-color": "blue",
      },
      "gray": Object {
        "border-bottom-color": "gray",
      },
      "green": Object {
        "border-bottom-color": "green",
      },
      "orange": Object {
        "border-bottom-color": "orange",
      },
      "purple": Object {
        "border-bottom-color": "purple",
      },
      "red": Object {
        "border-bottom-color": "red",
      },
      "white": Object {
        "border-bottom-color": "white",
      },
      "yellow": Object {
        "border-bottom-color": "yellow",
      },
    },
    "gray": Object {
      "border-color": "gray",
    },
    "green": Object {
      "border-color": "green",
    },
    "left": Object {
      "black": Object {
        "border-left-color": "black",
      },
      "blue": Object {
        "border-left-color": "blue",
      },
      "gray": Object {
        "border-left-color": "gray",
      },
      "green": Object {
        "border-left-color": "green",
      },
      "orange": Object {
        "border-left-color": "orange",
      },
      "purple": Object {
        "border-left-color": "purple",
      },
      "red": Object {
        "border-left-color": "red",
      },
      "white": Object {
        "border-left-color": "white",
      },
      "yellow": Object {
        "border-left-color": "yellow",
      },
    },
    "orange": Object {
      "border-color": "orange",
    },
    "purple": Object {
      "border-color": "purple",
    },
    "red": Object {
      "border-color": "red",
    },
    "right": Object {
      "black": Object {
        "border-right-color": "black",
      },
      "blue": Object {
        "border-right-color": "blue",
      },
      "gray": Object {
        "border-right-color": "gray",
      },
      "green": Object {
        "border-right-color": "green",
      },
      "orange": Object {
        "border-right-color": "orange",
      },
      "purple": Object {
        "border-right-color": "purple",
      },
      "red": Object {
        "border-right-color": "red",
      },
      "white": Object {
        "border-right-color": "white",
      },
      "yellow": Object {
        "border-right-color": "yellow",
      },
    },
    "top": Object {
      "black": Object {
        "border-top-color": "black",
      },
      "blue": Object {
        "border-top-color": "blue",
      },
      "gray": Object {
        "border-top-color": "gray",
      },
      "green": Object {
        "border-top-color": "green",
      },
      "orange": Object {
        "border-top-color": "orange",
      },
      "purple": Object {
        "border-top-color": "purple",
      },
      "red": Object {
        "border-top-color": "red",
      },
      "white": Object {
        "border-top-color": "white",
      },
      "yellow": Object {
        "border-top-color": "yellow",
      },
    },
    "white": Object {
      "border-color": "white",
    },
    "yellow": Object {
      "border-color": "yellow",
    },
  },
  "radius": Object {
    "bottomLeft": Object {
      "huge": Object {
        "border-bottom-left-radius": "20px",
      },
      "large": Object {
        "border-bottom-left-radius": "6px",
      },
      "medium": Object {
        "border-bottom-left-radius": "4px",
      },
      "small": Object {
        "border-bottom-left-radius": "2px",
      },
    },
    "bottomRight": Object {
      "huge": Object {
        "border-bottom-right-radius": "20px",
      },
      "large": Object {
        "border-bottom-right-radius": "6px",
      },
      "medium": Object {
        "border-bottom-right-radius": "4px",
      },
      "small": Object {
        "border-bottom-right-radius": "2px",
      },
    },
    "huge": Object {
      "border-radius": "20px",
    },
    "large": Object {
      "border-radius": "6px",
    },
    "medium": Object {
      "border-radius": "4px",
    },
    "small": Object {
      "border-radius": "2px",
    },
    "topLeft": Object {
      "huge": Object {
        "border-top-left-radius": "20px",
      },
      "large": Object {
        "border-top-left-radius": "6px",
      },
      "medium": Object {
        "border-top-left-radius": "4px",
      },
      "small": Object {
        "border-top-left-radius": "2px",
      },
    },
    "topRight": Object {
      "huge": Object {
        "border-top-right-radius": "20px",
      },
      "large": Object {
        "border-top-right-radius": "6px",
      },
      "medium": Object {
        "border-top-right-radius": "4px",
      },
      "small": Object {
        "border-top-right-radius": "2px",
      },
    },
  },
  "style": Object {
    "bottom": Object {
      "dashed": Object {
        "border-bottom-style": "dashed",
      },
      "dotted": Object {
        "border-bottom-style": "dotted",
      },
      "none": Object {
        "border-bottom-style": "none",
      },
      "solid": Object {
        "border-bottom-style": "solid",
      },
    },
    "dashed": Object {
      "border-style": "dashed",
    },
    "dotted": Object {
      "border-style": "dotted",
    },
    "left": Object {
      "dashed": Object {
        "border-left-style": "dashed",
      },
      "dotted": Object {
        "border-left-style": "dotted",
      },
      "none": Object {
        "border-left-style": "none",
      },
      "solid": Object {
        "border-left-style": "solid",
      },
    },
    "none": Object {
      "border-style": "none",
    },
    "right": Object {
      "dashed": Object {
        "border-right-style": "dashed",
      },
      "dotted": Object {
        "border-right-style": "dotted",
      },
      "none": Object {
        "border-right-style": "none",
      },
      "solid": Object {
        "border-right-style": "solid",
      },
    },
    "solid": Object {
      "border-style": "solid",
    },
    "top": Object {
      "dashed": Object {
        "border-top-style": "dashed",
      },
      "dotted": Object {
        "border-top-style": "dotted",
      },
      "none": Object {
        "border-top-style": "none",
      },
      "solid": Object {
        "border-top-style": "solid",
      },
    },
  },
  "width": Object {
    "bottom": Object {
      "extraThick": Object {
        "border-bottom-width": "8px",
      },
      "medium": Object {
        "border-bottom-width": "2px",
      },
      "none": Object {
        "border-bottom-width": "none",
      },
      "thick": Object {
        "border-bottom-width": "4px",
      },
      "thin": Object {
        "border-bottom-width": "1px",
      },
    },
    "extraThick": Object {
      "border-width": "8px",
    },
    "left": Object {
      "extraThick": Object {
        "border-left-width": "8px",
      },
      "medium": Object {
        "border-left-width": "2px",
      },
      "none": Object {
        "border-left-width": "none",
      },
      "thick": Object {
        "border-left-width": "4px",
      },
      "thin": Object {
        "border-left-width": "1px",
      },
    },
    "medium": Object {
      "border-width": "2px",
    },
    "none": Object {
      "border-width": "none",
    },
    "right": Object {
      "extraThick": Object {
        "border-right-width": "8px",
      },
      "medium": Object {
        "border-right-width": "2px",
      },
      "none": Object {
        "border-right-width": "none",
      },
      "thick": Object {
        "border-right-width": "4px",
      },
      "thin": Object {
        "border-right-width": "1px",
      },
    },
    "thick": Object {
      "border-width": "4px",
    },
    "thin": Object {
      "border-width": "1px",
    },
    "top": Object {
      "extraThick": Object {
        "border-top-width": "8px",
      },
      "medium": Object {
        "border-top-width": "2px",
      },
      "none": Object {
        "border-top-width": "none",
      },
      "thick": Object {
        "border-top-width": "4px",
      },
      "thin": Object {
        "border-top-width": "1px",
      },
    },
  },
}
`;

exports[`border when no custom config is provided should return the default config 1`] = `
Object {
  "color": Object {
    "black": Object {
      "border-color": "black",
    },
    "blue": Object {
      "border-color": "blue",
    },
    "bottom": Object {
      "black": Object {
        "border-bottom-color": "black",
      },
      "blue": Object {
        "border-bottom-color": "blue",
      },
      "gray": Object {
        "border-bottom-color": "gray",
      },
      "green": Object {
        "border-bottom-color": "green",
      },
      "orange": Object {
        "border-bottom-color": "orange",
      },
      "purple": Object {
        "border-bottom-color": "purple",
      },
      "red": Object {
        "border-bottom-color": "red",
      },
      "white": Object {
        "border-bottom-color": "white",
      },
      "yellow": Object {
        "border-bottom-color": "yellow",
      },
    },
    "gray": Object {
      "border-color": "gray",
    },
    "green": Object {
      "border-color": "green",
    },
    "left": Object {
      "black": Object {
        "border-left-color": "black",
      },
      "blue": Object {
        "border-left-color": "blue",
      },
      "gray": Object {
        "border-left-color": "gray",
      },
      "green": Object {
        "border-left-color": "green",
      },
      "orange": Object {
        "border-left-color": "orange",
      },
      "purple": Object {
        "border-left-color": "purple",
      },
      "red": Object {
        "border-left-color": "red",
      },
      "white": Object {
        "border-left-color": "white",
      },
      "yellow": Object {
        "border-left-color": "yellow",
      },
    },
    "orange": Object {
      "border-color": "orange",
    },
    "purple": Object {
      "border-color": "purple",
    },
    "red": Object {
      "border-color": "red",
    },
    "right": Object {
      "black": Object {
        "border-right-color": "black",
      },
      "blue": Object {
        "border-right-color": "blue",
      },
      "gray": Object {
        "border-right-color": "gray",
      },
      "green": Object {
        "border-right-color": "green",
      },
      "orange": Object {
        "border-right-color": "orange",
      },
      "purple": Object {
        "border-right-color": "purple",
      },
      "red": Object {
        "border-right-color": "red",
      },
      "white": Object {
        "border-right-color": "white",
      },
      "yellow": Object {
        "border-right-color": "yellow",
      },
    },
    "top": Object {
      "black": Object {
        "border-top-color": "black",
      },
      "blue": Object {
        "border-top-color": "blue",
      },
      "gray": Object {
        "border-top-color": "gray",
      },
      "green": Object {
        "border-top-color": "green",
      },
      "orange": Object {
        "border-top-color": "orange",
      },
      "purple": Object {
        "border-top-color": "purple",
      },
      "red": Object {
        "border-top-color": "red",
      },
      "white": Object {
        "border-top-color": "white",
      },
      "yellow": Object {
        "border-top-color": "yellow",
      },
    },
    "white": Object {
      "border-color": "white",
    },
    "yellow": Object {
      "border-color": "yellow",
    },
  },
  "radius": Object {
    "bottomLeft": Object {
      "large": Object {
        "border-bottom-left-radius": "6px",
      },
      "medium": Object {
        "border-bottom-left-radius": "4px",
      },
      "small": Object {
        "border-bottom-left-radius": "2px",
      },
    },
    "bottomRight": Object {
      "large": Object {
        "border-bottom-right-radius": "6px",
      },
      "medium": Object {
        "border-bottom-right-radius": "4px",
      },
      "small": Object {
        "border-bottom-right-radius": "2px",
      },
    },
    "large": Object {
      "border-radius": "6px",
    },
    "medium": Object {
      "border-radius": "4px",
    },
    "small": Object {
      "border-radius": "2px",
    },
    "topLeft": Object {
      "large": Object {
        "border-top-left-radius": "6px",
      },
      "medium": Object {
        "border-top-left-radius": "4px",
      },
      "small": Object {
        "border-top-left-radius": "2px",
      },
    },
    "topRight": Object {
      "large": Object {
        "border-top-right-radius": "6px",
      },
      "medium": Object {
        "border-top-right-radius": "4px",
      },
      "small": Object {
        "border-top-right-radius": "2px",
      },
    },
  },
  "style": Object {
    "bottom": Object {
      "dashed": Object {
        "border-bottom-style": "dashed",
      },
      "dotted": Object {
        "border-bottom-style": "dotted",
      },
      "none": Object {
        "border-bottom-style": "none",
      },
      "solid": Object {
        "border-bottom-style": "solid",
      },
    },
    "dashed": Object {
      "border-style": "dashed",
    },
    "dotted": Object {
      "border-style": "dotted",
    },
    "left": Object {
      "dashed": Object {
        "border-left-style": "dashed",
      },
      "dotted": Object {
        "border-left-style": "dotted",
      },
      "none": Object {
        "border-left-style": "none",
      },
      "solid": Object {
        "border-left-style": "solid",
      },
    },
    "none": Object {
      "border-style": "none",
    },
    "right": Object {
      "dashed": Object {
        "border-right-style": "dashed",
      },
      "dotted": Object {
        "border-right-style": "dotted",
      },
      "none": Object {
        "border-right-style": "none",
      },
      "solid": Object {
        "border-right-style": "solid",
      },
    },
    "solid": Object {
      "border-style": "solid",
    },
    "top": Object {
      "dashed": Object {
        "border-top-style": "dashed",
      },
      "dotted": Object {
        "border-top-style": "dotted",
      },
      "none": Object {
        "border-top-style": "none",
      },
      "solid": Object {
        "border-top-style": "solid",
      },
    },
  },
  "width": Object {
    "bottom": Object {
      "extraThick": Object {
        "border-bottom-width": "8px",
      },
      "medium": Object {
        "border-bottom-width": "2px",
      },
      "none": Object {
        "border-bottom-width": "none",
      },
      "thick": Object {
        "border-bottom-width": "4px",
      },
      "thin": Object {
        "border-bottom-width": "1px",
      },
    },
    "extraThick": Object {
      "border-width": "8px",
    },
    "left": Object {
      "extraThick": Object {
        "border-left-width": "8px",
      },
      "medium": Object {
        "border-left-width": "2px",
      },
      "none": Object {
        "border-left-width": "none",
      },
      "thick": Object {
        "border-left-width": "4px",
      },
      "thin": Object {
        "border-left-width": "1px",
      },
    },
    "medium": Object {
      "border-width": "2px",
    },
    "none": Object {
      "border-width": "none",
    },
    "right": Object {
      "extraThick": Object {
        "border-right-width": "8px",
      },
      "medium": Object {
        "border-right-width": "2px",
      },
      "none": Object {
        "border-right-width": "none",
      },
      "thick": Object {
        "border-right-width": "4px",
      },
      "thin": Object {
        "border-right-width": "1px",
      },
    },
    "thick": Object {
      "border-width": "4px",
    },
    "thin": Object {
      "border-width": "1px",
    },
    "top": Object {
      "extraThick": Object {
        "border-top-width": "8px",
      },
      "medium": Object {
        "border-top-width": "2px",
      },
      "none": Object {
        "border-top-width": "none",
      },
      "thick": Object {
        "border-top-width": "4px",
      },
      "thin": Object {
        "border-top-width": "1px",
      },
    },
  },
}
`;
